# gw

./: .gitignore  plan.md  pyproject.toml
configs/phase1/: task1_0_mlp.yaml
configs/phase2/: task2_0_cnn.yaml
configs/phase3_augmentation/: a0_none.yaml  a1_flip.yaml  a2_rotate.yaml  a3_translate.yaml  a4_scale.yaml  a5_brightness_contrast.yaml  a6_noise.yaml  a7_cutout.yaml  a8_geom_combo.yaml  a9_full_combo.yaml
configs/phase4_transfer/: efficientnet_b0_stage1.yaml  efficientnet_b0_stage2.yaml  mobilenet_v2_stage1.yaml  mobilenet_v2_stage2.yaml  squeezenet.yaml
configs/phase5_arch_tweaks/: task5_1_stem_stage1.yaml  task5_1_stem_stage2.yaml  task5_2_custom_stage1.yaml  task5_2_custom_stage2.yaml
configs/phase6_full_output/: task6_0_cnn_full.yaml  task6_1_best_full_stage1.yaml  task6_1_best_full_stage2.yaml
configs/phase7_tuning/: tune_best.yaml
data/: explore_data.py  keypoint_stats.txt  null_analysis.txt  split_data.py  split_summary.txt  visualize_samples.py
logs/phase1_mlp/: config.yaml  metrics.csv
logs/phase2_cnn/: config.yaml  metrics.csv
results/: results.csv
src/: augmentation.py  dataset.py  evaluate.py  train.py  tune.py  utils.py  visualize_predictions.py
src/models/: mlp.py  registry.py  simple_cnn.py  transfer.py
